# texttoSQL

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements-train.txt  requirements.txt
.claude/: settings.local.json
configs/: default.yaml
docs/: PAPER_RECOMMENDATION_PLAN.md  report.md
docs/handoff/: handoff-20260314-1712.md  handoff-20260316-1118.md  handoff-20260317-graphv3-fixes.md  handoff-20260317-phase3.md  handoff-20260317-phase4-structure.md  handoff-20260317.md  handoff-20260318-1119.md
embeddings/: __init__.py
llms/: __init__.py  base.py  huggingface.py  openai.py
scripts/: analyze_retrieval.py  build_golden_schema.py  build_npmi_matrix.py  build_schema_graph.py  curate_dataset_kd.py  enrich_graph.py  mine_correction_data.py  prepare_rl_data.py  prepare_sft_data.py  run_benchmark.py  run_pipeline.py  train_rl.py  train_sft.py
src/: __init__.py
src/data/: schema_chunker.py  spider_v1_adapter.py
src/data_parser/: __init__.py  base.py  bird_parser.py  spider_parser.py
src/embeddings/: __init__.py  base.py  huggingface.py  openai.py
src/evaluation/: __init__.py  benchmark.py  metrics.py
src/generation/: __init__.py  inference.py
src/llms/: __init__.py  base.py  chat_format.py  factory.py  huggingface.py  openai.py
src/post/: __init__.py  candidate_selector.py  retry_loop.py  sql_executor.py
src/pre_retrieval/: __init__.py  query_augmentor.py  value_scanner.py
src/retrieval/: __init__.py  base_retriever.py  bidirectional_linker.py  graph_retriever.py  hybrid_retriever.py  npmi_scorer.py  query_augmentor.py  question_decomposer.py  schema_filter.py  value_scanner.py
src/retrieval/utils/: __init__.py  bidirectional_linker.py  npmi_scorer.py  schema_filter.py
src/schema/: __init__.py  models.py  schema_chunker.py  schema_indexer.py
src/schema_graph/: __init__.py  graph_builder.py  graph_retriever.py  graph_types.py  node_enricher.py
src/schema_graph/edge_builders/: __init__.py  semantic_edges.py  statistical_edges.py  structural_edges.py
src/shared/: sqlite_utils.py
tests/: test_async_inference.py  test_correction_formatter.py  test_npmi_scorer.py  test_omnisql_formatter.py  test_retry_loop.py  test_schema_graph_retrieve.py  test_sql_executor.py  test_value_scanner.py
training/: config.py  correction_formatter.py  data_formatter.py  reward.py  rl_trainer.py  sft_trainer.py
unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
