[project]
name = "text2sql-baseline"
version = "0.1.0"
description = "Text-to-SQL Baseline: RAG Schema Linking + SLM Fine-tuning (SFT → GRPO/DPO)"
requires-python = ">=3.10"
dependencies = [
    # Embeddings & Retrieval
    "sentence-transformers>=2.6.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    # Utilities
    "pyyaml>=6.0",
    "sqlparse>=0.5.0",
    "pydantic>=2.0",
    "tqdm>=4.66.0",
    "rich>=13.0",
]

[project.optional-dependencies]
train = [
    # Unsloth (install separately: pip install unsloth)
    # "unsloth",  # install via: pip install unsloth
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "training*"]

[tool.ruff]
line-length = 120
target-version = "py310"
